// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the Card & CardWrapper Component Visual Snapshot testing Card - Renders without crashing 1`] = `
.c0 {
  -webkit-flex: 0 0 200px;
  -ms-flex: 0 0 200px;
  flex: 0 0 200px;
  width: 100%;
  margin: 10px;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.3);
}

.c1 {
  max-width: 100%;
}

.c2 {
  width: 100%;
  font-size: 16px;
  text-align: center;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Internal Children
  </div>
  <h3
    class="c2"
  >
    title of card
  </h3>
</div>
`;

exports[`Unit tests for the Card & CardWrapper Component Visual Snapshot testing CardWrapper - Renders without crashing 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  -webkit-flex: 0 0 200px;
  -ms-flex: 0 0 200px;
  flex: 0 0 200px;
  width: 100%;
  margin: 10px;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.3);
}

.c2 {
  max-width: 100%;
}

.c3 {
  width: 100%;
  font-size: 16px;
  text-align: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Internal Children 1
      </div>
      <h3
        class="c3"
      >
        title1
      </h3>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Internal Children 2
      </div>
      <h3
        class="c3"
      >
        title2
      </h3>
    </div>
  </div>
</div>
`;
